[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2pdf"
version = "0.1.0"
description = "Crawl a docs site, render to PDF (Playwright), merge with bookmarks for LLM ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Konstantinos Soufleros", email = "soufleros.kostas@gmail.com" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "lxml>=5.2,<6",
  "httpx>=0.27,<0.28",
  "pypdf>=5,<6",
  "playwright>=1.48,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24.3", "ruff>=0.5"]

[project.scripts]
doc2pdf = "doc2pdf:main"

[tool.setuptools]
py-modules = ["doc2pdf"]

[tool.black]
line-length = 100
